@@ -1,3 +1,12 @@
+2022-04-23  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Frameworks/StepTalk/STPointer.h:
+	* Frameworks/StepTalk/STPointer.m:
+	* Frameworks/StepTalk/NSInvocation+additions.m (STObjectFromValueOfType):
+	* Frameworks/StepTalk/GNUmakefile:
+	Add new class to manage C pointers and read and update data
+	referenced through such pointers.
+
 2020-06-29  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* Frameworks/StepTalk/GNUmakefile: Specify dependent libraries
